fix footer icons align
feature: 7100

--- a/tpl/app/less/stb/ui/footer.less
+++ b/tpl/app/less/stb/ui/footer.less
@@ -45,6 +45,7 @@
 
             .icon {
                 display:block;
+                text-align:left;
                 background:no-repeat center center;
             }
 
